--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -3630,7 +3630,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SUp-E4-ma6">
-                                                        <rect key="frame" x="0.0" y="54.5" width="414" height="420"/>
+                                                        <rect key="frame" x="0.0" y="60.5" width="414" height="420"/>
                                                         <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="420" id="LeP-tx-xdh"/>
@@ -4016,33 +4016,33 @@
                                                             </collectionViewCell>
                                                         </cells>
                                                     </collectionView>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lHE-Yk-atH">
-                                                        <rect key="frame" x="99" y="17.5" width="80" height="30"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lHE-Yk-atH">
+                                                        <rect key="frame" x="91" y="17.5" width="90" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="EVW-A8-pCB"/>
-                                                            <constraint firstAttribute="width" constant="80" id="J97-pF-wUi"/>
+                                                            <constraint firstAttribute="width" constant="90" id="J97-pF-wUi"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="18"/>
                                                         <inset key="titleEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <state key="normal" title="문장 추론">
-                                                            <color key="titleColor" systemColor="labelColor"/>
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
                                                             <action selector="clickedInferenceButton:" destination="5QS-d4-fk0" eventType="touchUpInside" id="z3C-Mm-qjF"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t0r-u5-UB7">
-                                                        <rect key="frame" x="199" y="17.5" width="80" height="30"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t0r-u5-UB7">
+                                                        <rect key="frame" x="193" y="17.5" width="90" height="30"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="80" id="II0-lZ-dxe"/>
+                                                            <constraint firstAttribute="width" constant="90" id="II0-lZ-dxe"/>
                                                             <constraint firstAttribute="height" constant="30" id="SH4-9L-MvA"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="18"/>
                                                         <inset key="titleEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <state key="normal" title="문장 교정">
-                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
                                                             <action selector="clickedCorrectionButton:" destination="5QS-d4-fk0" eventType="touchUpInside" id="JZh-1C-XV6"/>
@@ -4054,12 +4054,12 @@
                                                     <constraint firstItem="SUp-E4-ma6" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" id="2Nj-Ey-JaI"/>
                                                     <constraint firstItem="Jgf-hv-vqk" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" constant="20" id="2Vw-CI-Zsw"/>
                                                     <constraint firstItem="Jgf-hv-vqk" firstAttribute="top" secondItem="th2-dm-1wh" secondAttribute="top" constant="22" id="6QK-b2-eR1"/>
-                                                    <constraint firstItem="lHE-Yk-atH" firstAttribute="leading" secondItem="Jgf-hv-vqk" secondAttribute="trailing" constant="20" id="Ffc-2G-9zz"/>
-                                                    <constraint firstItem="t0r-u5-UB7" firstAttribute="leading" secondItem="lHE-Yk-atH" secondAttribute="trailing" constant="20" id="JN6-eM-cTZ"/>
+                                                    <constraint firstItem="lHE-Yk-atH" firstAttribute="leading" secondItem="Jgf-hv-vqk" secondAttribute="trailing" constant="12" id="Ffc-2G-9zz"/>
+                                                    <constraint firstItem="t0r-u5-UB7" firstAttribute="leading" secondItem="lHE-Yk-atH" secondAttribute="trailing" constant="12" id="JN6-eM-cTZ"/>
                                                     <constraint firstAttribute="height" constant="480" id="Jes-i3-Mte"/>
                                                     <constraint firstItem="t0r-u5-UB7" firstAttribute="centerY" secondItem="lHE-Yk-atH" secondAttribute="centerY" id="RTk-76-w0x"/>
                                                     <constraint firstAttribute="trailing" secondItem="SUp-E4-ma6" secondAttribute="trailing" id="bTl-p2-ar2"/>
-                                                    <constraint firstItem="SUp-E4-ma6" firstAttribute="top" secondItem="Jgf-hv-vqk" secondAttribute="bottom" constant="12" id="qgT-Go-8MS"/>
+                                                    <constraint firstItem="SUp-E4-ma6" firstAttribute="top" secondItem="Jgf-hv-vqk" secondAttribute="bottom" constant="18" id="qgT-Go-8MS"/>
                                                     <constraint firstItem="lHE-Yk-atH" firstAttribute="centerY" secondItem="Jgf-hv-vqk" secondAttribute="centerY" id="yqb-7S-hTs"/>
                                                 </constraints>
                                             </view>
