--- a/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
@@ -3316,21 +3316,25 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="90" id="Qne-Fi-OKW"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="12"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="th2-dm-1wh">
                                                 <rect key="frame" x="0.0" y="138" width="768" height="480"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문장분석" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jgf-hv-vqk">
-                                                        <rect key="frame" x="20" y="22" width="42" height="14.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문장분석" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jgf-hv-vqk">
+                                                        <rect key="frame" x="20" y="12" width="90" height="36"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="90" id="0it-12-fRI"/>
+                                                            <constraint firstAttribute="height" constant="36" id="XET-Qt-Xax"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="10"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SUp-E4-ma6">
-                                                        <rect key="frame" x="0.0" y="44.5" width="768" height="420"/>
+                                                        <rect key="frame" x="0.0" y="64" width="768" height="420"/>
                                                         <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="420" id="LeP-tx-xdh"/>
@@ -3716,25 +3720,32 @@
                                                             </collectionViewCell>
                                                         </cells>
                                                     </collectionView>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neb-Pl-9GJ">
-                                                        <rect key="frame" x="89" y="12" width="52" height="20"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neb-Pl-9GJ">
+                                                        <rect key="frame" x="118" y="12" width="100" height="36"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="20" id="wVO-to-Vdl"/>
+                                                            <constraint firstAttribute="height" constant="36" id="3hq-rV-vhg"/>
+                                                            <constraint firstAttribute="width" constant="100" id="87U-Bj-EXC"/>
                                                         </constraints>
+                                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="10"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                        <state key="normal" title="문장추론"/>
+                                                        <state key="normal" title="문장추론">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
                                                         <connections>
                                                             <action selector="clickedInferenceButton:" destination="5QS-d4-fk0" eventType="touchUpInside" id="1JK-6v-5hz"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UzQ-i3-wo7">
-                                                        <rect key="frame" x="168" y="12" width="100" height="20"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UzQ-i3-wo7">
+                                                        <rect key="frame" x="234" y="12" width="100" height="36"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="20" id="bOl-uc-4zv"/>
-                                                            <constraint firstAttribute="width" constant="100" id="wm1-rz-i8j"/>
+                                                            <constraint firstAttribute="height" constant="36" id="5xY-oZ-lIz"/>
+                                                            <constraint firstAttribute="width" constant="100" id="lFl-2M-fy4"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" title="문장교정"/>
+                                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="10"/>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" title="문장교정">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
                                                         <connections>
                                                             <action selector="clickedCorrectionButton:" destination="5QS-d4-fk0" eventType="touchUpInside" id="K0I-j6-dma"/>
                                                         </connections>
@@ -3743,16 +3754,16 @@
                                                 <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="SUp-E4-ma6" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" id="2Nj-Ey-JaI"/>
-                                                    <constraint firstItem="Jgf-hv-vqk" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" constant="20" id="2Vw-CI-Zsw"/>
-                                                    <constraint firstItem="Jgf-hv-vqk" firstAttribute="top" secondItem="th2-dm-1wh" secondAttribute="top" constant="22" id="6QK-b2-eR1"/>
-                                                    <constraint firstItem="UzQ-i3-wo7" firstAttribute="leading" secondItem="neb-Pl-9GJ" secondAttribute="trailing" constant="27" id="7Qk-2j-fjS"/>
+                                                    <constraint firstItem="Jgf-hv-vqk" firstAttribute="leading" secondItem="th2-dm-1wh" secondAttribute="leading" constant="20" symbolic="YES" id="3ZT-rI-Kwc"/>
+                                                    <constraint firstItem="neb-Pl-9GJ" firstAttribute="leading" secondItem="Jgf-hv-vqk" secondAttribute="trailing" constant="8" id="3x0-s9-MuW"/>
+                                                    <constraint firstItem="Jgf-hv-vqk" firstAttribute="top" secondItem="th2-dm-1wh" secondAttribute="top" constant="12" id="CRQ-3Q-7Xh"/>
+                                                    <constraint firstItem="Jgf-hv-vqk" firstAttribute="top" secondItem="neb-Pl-9GJ" secondAttribute="top" id="Iii-aU-cn4"/>
                                                     <constraint firstAttribute="height" constant="480" id="Jes-i3-Mte"/>
-                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Jgf-hv-vqk" secondAttribute="trailing" constant="20" symbolic="YES" id="PA1-jy-gge"/>
+                                                    <constraint firstItem="SUp-E4-ma6" firstAttribute="top" secondItem="Jgf-hv-vqk" secondAttribute="bottom" constant="16" id="WBC-Ga-02K"/>
+                                                    <constraint firstItem="neb-Pl-9GJ" firstAttribute="centerY" secondItem="Jgf-hv-vqk" secondAttribute="centerY" id="WqZ-8t-Slu"/>
                                                     <constraint firstAttribute="trailing" secondItem="SUp-E4-ma6" secondAttribute="trailing" id="bTl-p2-ar2"/>
-                                                    <constraint firstItem="neb-Pl-9GJ" firstAttribute="top" secondItem="th2-dm-1wh" secondAttribute="top" constant="12" id="fBR-eh-KzF"/>
-                                                    <constraint firstItem="UzQ-i3-wo7" firstAttribute="top" secondItem="th2-dm-1wh" secondAttribute="top" constant="12" id="kcn-iy-Y0W"/>
-                                                    <constraint firstItem="SUp-E4-ma6" firstAttribute="top" secondItem="Jgf-hv-vqk" secondAttribute="bottom" constant="8" id="qgT-Go-8MS"/>
-                                                    <constraint firstItem="neb-Pl-9GJ" firstAttribute="leading" secondItem="Jgf-hv-vqk" secondAttribute="trailing" constant="27" id="wUU-nm-sit"/>
+                                                    <constraint firstItem="UzQ-i3-wo7" firstAttribute="centerY" secondItem="neb-Pl-9GJ" secondAttribute="centerY" id="bvy-R1-oIC"/>
+                                                    <constraint firstItem="UzQ-i3-wo7" firstAttribute="leading" secondItem="neb-Pl-9GJ" secondAttribute="trailing" constant="16" id="wPN-wG-qbs"/>
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국어사전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1v-wZ-f4g">
@@ -3858,13 +3869,14 @@
                         <outlet property="analyzeCollectionView" destination="SUp-E4-ma6" id="xdB-fs-iUm"/>
                         <outlet property="buttonCorrection" destination="UzQ-i3-wo7" id="cN6-eT-PaL"/>
                         <outlet property="buttonInference" destination="neb-Pl-9GJ" id="QkA-JW-za3"/>
+                        <outlet property="labelAnalyze" destination="Jgf-hv-vqk" id="R6C-Ua-l3n"/>
                         <outlet property="originSentenceLabel" destination="h7p-v7-t3v" id="J6T-tB-u3g"/>
                         <outlet property="wordCollectionView" destination="iDb-Wf-qWb" id="BuT-Xt-mmB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qD0-O6-fgs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1031.8840579710145" y="2287.5"/>
+            <point key="canvasLocation" x="1031.25" y="2287.5"/>
         </scene>
         <!--Munhae Test Quiz View Controller-->
         <scene sceneID="aAD-Ye-9YH">
